Fixed word break in notification body

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -269,7 +269,7 @@ h3 i { margin-right: 5px; }
 .ui-notifications-title { height: 26px; font-size: 11px; border-bottom: 1px solid #505050; padding: 0 10px; line-height: 24px; color: white; border-radius: 3px 3px 0 0; }
 .light .ui-notifications-title { border-bottom-color: #E0E0E0; color: black; background-color: white; }
 .ui-notifications-padding { padding: 0 10px; }
-.ui-notifications-body { line-height: 14px; font-size: 12px; margin-top: 10px; }
+.ui-notifications-body { line-height: 14px; font-size: 12px; margin-top: 10px; word-break: break-word; }
 .ui-notifications button { display: inline-block; position: relative; border-radius: 2px; outline: 0; font-size: 11px; color: white; font-weight: bold; padding: 2px 10px; margin-bottom: 10px; border: 1px solid white; background: transparent; }
 .ui-notifications button:hover { opacity: 0.9; }
 .ui-notifications-remove {}
